# networking

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
app/client/: README.md  client.cmake  client.cpp  client.h
app/common/: README.md  common.cmake  common.h
app/connection/: README.md  connection.cmake  connection.h  connection_interface.cpp  connection_interface.h  file_writer_connection.cpp  file_writer_connection.h  socket_file_connection.cpp  socket_file_connection.h  tmp_file_writer_connection.h
app/connection/socket_messenger/: README.md  socket_messenger.cmake  socket_messenger.h
app/cryptographer/: README.md  cryptographer.cmake  cryptographer.cpp  cryptographer.h  encryption_interface.h
app/file/: README.md  file.cmake  file_handler.cpp  file_handler.h  file_interface.cpp  file_interface.h
app/file_handler/: README.md  file_handler.cmake
app/packet/: README.md  packet.cmake  packet.h
app/server/: README.md  server.cmake  server.cpp  server.h
app/timer/: timer.cmake  timer.cpp  timer.h
data/: Somedata.txt
scripts/: build.sh  class.sh  install_dep.sh  integration_test.sh  test.sh
src/: CMakeLists.txt  client_handler.cpp  client_handler.h  connection.h  consoleParams.h  data_processor_interface.h  decryptor.h  defs.h  encryptor.h  file_reader.h  file_writer.h  hash_calculator.cpp  hash_calculator.h  my_packet.h  pch.h  server.h  session.cpp  session.h  thread_safe_queue.h  timer.cpp  timer.h
tests/: CMakeLists.txt  pch.cpp  pch.h  test.cpp
tests/connection/: connection_test.cmake  connection_test.cpp  connection_test.h
tests/encryption/: encryption_test.cmake  encryption_test.cpp  encryption_test.h
tests/network/: client_handler.h  connection.h  connection_test.cpp  crypt_connection_test.cpp  crypto_test.cpp  data_processor_interface.h  decryptor.h  defs.h  defs_mock.h  encryptor.h  file_test.cpp  file_writer.h  hash_calculator.cpp  my_packet.h  network_test.cmake  network_test.cpp  pch.h  server.cpp  thread_safe_queue.h  thread_safe_queue_test.cpp
tests/packet/: packet_test.cmake  packet_test.cpp  packet_test.h
